# nav2_diffusion_planner

./: .gitignore  CHANGELOG.md  README.md  plan.md
docs/: architecture.md  choosing_a_planner.md  contributing.md  controller_comparison.md  custom_model_battle.md  generative_limits.md  getting_started.md  mode_b_demo.mcap  model_comparison.md  model_zoo.md  next_phase.md  planner_comparison.md  roadmap.md  simulation.md  training.md  visualization.md
model_zoo/: README.md
nav2_ara_star_planner/: package.xml
nav2_diffusion_benchmarks/: CMakeLists.txt  README.md  package.xml
nav2_diffusion_benchmarks/include/nav2_diffusion_benchmarks/: aggregate.hpp  collision_metrics.hpp  metrics.hpp  report.hpp  run_recorder.hpp  run_result.hpp  scenario.hpp  scores.hpp
nav2_diffusion_benchmarks/src/: aggregate.cpp  benchmark_runner_node.cpp  collision_metrics.cpp  metrics.cpp  report.cpp  run_recorder.cpp  scenario.cpp  scores.cpp
nav2_diffusion_benchmarks/test/: test_aggregate.cpp  test_collision_metrics.cpp  test_metrics.cpp  test_report.cpp  test_run_recorder.cpp  test_scenario.cpp  test_scores.cpp
nav2_diffusion_bringup/: CMakeLists.txt  README.md  package.xml
nav2_diffusion_controller/: CMakeLists.txt  README.md  package.xml
nav2_diffusion_core/: CMakeLists.txt  README.md  package.xml
nav2_diffusion_global_planner/: README.md  package.xml
nav2_diffusion_models/: README.md  model_card_template.md
nav2_diffusion_msgs/: package.xml
nav2_diffusion_onnx/: CMakeLists.txt  README.md  package.xml
nav2_diffusion_rviz_plugins/: CMakeLists.txt  README.md  package.xml
nav2_diffusion_safety/: CMakeLists.txt  README.md  package.xml
nav2_diffusion_training/: README.md  package.xml  setup.py
nav2_dstar_lite_planner/: package.xml
nav2_experimental_global_planner/: README.md
nav2_experimental_planner/: README.md
nav2_jps_planner/: package.xml
(+288 files in other folders)
